# DroneTX

./: .gitignore  CMakeLists.txt  DroneTX.ino  README.md  build_tests.sh
internal/application/: joystick_service.cpp  joystick_service.h  radio_service.cpp  radio_service.h
internal/domain/: drone_command.cpp  drone_command.h  joystick_input.cpp
internal/infrastructure/: joystick_driver.cpp  joystick_driver.h  radio_driver.cpp  radio_driver.h
tests/: README.md  main.cpp
tests/domain/: drone_command_test.cpp  joystick_input_test.cpp
